# CPP-REST-Example

./: .gitignore  CMakeLists.txt  README.md  results.html
src/lib/: CMakeLists.txt  algorithm.h  analysis.h  cpplib.h  data.h  json.hpp  readJsonFile.hpp
src/main/: catchjson.cpp  parse.cpp  plot.cpp  save.cpp  start.cpp
src/plotlib/: CMakeLists.txt  example.cpp  matplotlibcpp.h
src/tests/: CMakeLists.txt
